Automatically backed up by Learn

--- a/app/views/south.erb
+++ b/app/views/south.erb
@@ -27,6 +27,5 @@
 </form>
 
 <body>
-  <img class="images" src =http://photos.cinematreasures.org/production/photos/176200/1471016252/large.jpg?1471016252 >
-  <p>Seattle’s broadway! </p>
+  <img class="images" src =http://www.edonline.com/collegecompass/graphics/south.gif>
 </body>
