--- a/app/views/eastcoast.erb
+++ b/app/views/eastcoast.erb
@@ -26,6 +26,5 @@
 </form>
 
 <body>
-  <img class="images" src =hhttps://www.maps.com/media/catalog/product/cache/1/thumbnail/17f82f742ffe127f42dca9de82fb58b1/u/s/usa_region_eastcoast_previewfull.png>
-  <p>Seattle’s broadway! </p>
+  <img class="images" src =https://cyclingnewengland.files.wordpress.com/2016/04/east_coast_greenway_map.jpg?w=640>
 </body>
